max-encoded-len/tests/max_encoded_len_ui/not_encode.stderr
error[E0277]: the trait bound `NotEncode: parity_scale_codec::codec::WrapperTypeEncode` is not satisfied
  --> $DIR/not_encode.rs:3:10
   |
3  | #[derive(MaxEncodedLen)]
   |          ^^^^^^^^^^^^^ the trait `parity_scale_codec::codec::WrapperTypeEncode` is not implemented for `NotEncode`
   |
  ::: $WORKSPACE/max-encoded-len/src/lib.rs
   |
   | pub trait MaxEncodedLen: Encode {
   |                          ------ required by this bound in `MaxEncodedLen`
   |
   = note: required because of the requirements on the impl of `parity_scale_codec::codec::Encode` for `NotEncode`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
