max-encoded-len/tests/max_encoded_len_ui/not_encode.rs
use max_encoded_len::MaxEncodedLen;

#[derive(MaxEncodedLen)]
struct NotEncode;

fn main() {}
